# joone

./: .gitignore  AGENTS.md  HISTORY.md  Handover.md  PROGRESS.md  README.md  package-lock.json  package.json  test_store.ts  tsconfig.json  vitest.config.ts  vitest.out  vitest_output.txt
.github/workflows/: desktop-build.yml
desktop/: index.html  vite.config.ts
desktop/src/: App.tsx  DesktopErrorBoundary.tsx  main.tsx  styles.css  vite-env.d.ts
docs/: 01_insights_and_patterns.md  02_edge_cases_and_mitigations.md  03_initial_implementation_plan.md  04_tech_stack_proposal.md  05_prd.md  06_user_stories.md  07_system_architecture.md  08_roadmap.md
e2b/: Dockerfile
src/: index.ts  test_cache.ts  test_google.js  test_google.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/__tests__/: bootstrap.test.ts  config.test.ts  installHostDeps.test.ts  m55.test.ts  middleware.test.ts  modelFactory.test.ts  optimizations.test.ts  promptBuilder.test.ts  sandbox.test.ts  security.test.ts  streaming.test.ts  toolRouter.test.ts  tools.test.ts  tracing.test.ts  whitelistedBackend.test.ts
src/agents/: agentRegistry.ts  agentSpec.ts  builtinAgents.ts
src/cli/: config.ts  index.ts  modelFactory.ts  postinstall.ts  providers.ts  startupBenchmark.ts
src/commands/: builtinCommands.ts  commandRegistry.ts
src/core/: agentLoop.d.ts.map  agentLoop.ts  autoSave.ts  compactor.ts  contextGuard.ts  errors.ts  events.ts  promptBuilder.d.ts.map  promptBuilder.ts  reasoningRouter.ts  retry.ts  sessionResumer.ts  sessionStore.ts  (+2 more)
(+101 files in other folders)
